update: change password page and forms logic

--- a/src/app/auth/pages/change-password/change-password.component.html
+++ b/src/app/auth/pages/change-password/change-password.component.html
@@ -1,17 +1,16 @@
-<div class="card">
+<article class="card">
+  <app-request-change-password-form
+    *ngIf="!requested() && !canChange()"
+    [form]="requestChangePasswordForm"
+    [loading]="requestedLoading()"
+    (onSubmit)="requestChangePassword()"
+  />
+  <app-password-temp-code-form
+    *ngIf="requested() && !canChange()"
+    [form]="passwordTempCodeForm"
+    [loading]="passwordTempCodeLoading()"
+  />
   <form class="form">
-    <div class="control">
-      <label for="code">Ingresa tu código de acceso</label>
-      <input type="text" id="code" class="input" />
-    </div>
-    <div class="control">
-      <label for="email">Ingresa un correo electrónico</label>
-      <input type="email" id="email" class="input" />
-    </div>
-    <div class="control">
-      <label for="temp-code">Código temporal</label>
-      <input type="password" id="temp-code" class="input" />
-    </div>
     <div class="control">
       <label for="new-password">Contraseña nueva</label>
       <input type="password" id="new-password" class="input" />
@@ -22,4 +21,4 @@
     </div>
     <app-button type="submit">Cambiar contraseña</app-button>
   </form>
-</div>
+</article>
