update: auth page layout and forms

--- a/src/app/auth/pages/change-password/change-password.component.html
+++ b/src/app/auth/pages/change-password/change-password.component.html
@@ -1,24 +1,19 @@
 <article class="card">
-  <app-request-change-password-form
-    *ngIf="!requested() && !canChange()"
-    [form]="requestChangePasswordForm"
-    [loading]="requestedLoading()"
-    (onSubmit)="requestChangePassword()"
-  />
-  <app-password-temp-code-form
-    *ngIf="requested() && !canChange()"
-    [form]="passwordTempCodeForm"
-    [loading]="passwordTempCodeLoading()"
-  />
-  <form class="form">
-    <div class="control">
-      <label for="new-password">Contraseña nueva</label>
-      <input type="password" id="new-password" class="input" />
-    </div>
-    <div class="control">
-      <label for="confirm-new-password">Confirma tu contraseña nueva</label>
-      <input type="password" id="confirm-new-password" class="input" />
-    </div>
-    <app-button type="submit">Cambiar contraseña</app-button>
-  </form>
+  <header class="mb-3 flex flex-col gap-1">
+    <h1 class="text-2xl text-gray-800 font-medium">{{ title() }}</h1>
+    <h2 class="text-gray-700 font-light">{{ subtitle() }}</h2>
+  </header>
+  <ng-container *ngIf="!requested(); else newPass">
+    <app-request-change-password-form
+      [form]="requestChangePasswordForm"
+      [loading]="requestedLoading()"
+      (onSubmit)="requestChangePassword()"
+    />
+  </ng-container>
+  <ng-template #newPass>
+    <app-password-temp-code-form
+      [form]="passwordTempCodeForm"
+      [loading]="passwordTempCodeLoading()"
+    />
+  </ng-template>
 </article>
