--- a/src/app/auth/pages/change-password/password-temp-code-form/password-temp-code-form.component.html
+++ b/src/app/auth/pages/change-password/password-temp-code-form/password-temp-code-form.component.html
@@ -1,11 +1,25 @@
 <form class="form" [formGroup]="form">
   <div class="control">
-    <label for="temp-code">Código temporal</label>
+    <label for="temp-code">Ingresa el código temporal</label>
     <input
       type="password"
       id="temp-code"
       class="input"
       formControlName="passwordTempCode"
+      autocomplete="off"
+    />
+  </div>
+  <div class="control">
+    <label for="new-password">Contraseña nueva</label>
+    <input type="password" id="new-password" class="input" autocomplete="off" />
+  </div>
+  <div class="control">
+    <label for="confirm-new-password">Confirma tu contraseña nueva</label>
+    <input
+      type="password"
+      id="confirm-new-password"
+      class="input"
+      autocomplete="off"
     />
   </div>
   <app-button type="submit" [loading]="loading">Verificar</app-button>
