--- a/src/app/auth/auth.component.html
+++ b/src/app/auth/auth.component.html
@@ -1,3 +1,10 @@
-<main class="w-full h-screen flex justify-center items-center">
-  <router-outlet />
-</main>
+<div class="flex flex-col justify-between items-center w-full h-screen">
+  <main class="w-full max-w-lg h-screen flex justify-center items-center">
+    <router-outlet />
+  </main>
+  <footer class="border-t border-violet-100 w-full py-5 bg-violet-50">
+    <p class="text-gray-500 text-center text-sm font-medium uppercase">
+      Servinet Computers &copy; 2025
+    </p>
+  </footer>
+</div>
