--- a/src/app/auth/pages/change-password/components/request-change-password-form/request-change-password-form.component.html
+++ b/src/app/auth/pages/change-password/components/request-change-password-form/request-change-password-form.component.html
@@ -1,7 +1,13 @@
 <form class="form" [formGroup]="form" (ngSubmit)="emitOnSubmit()">
   <div class="control">
     <label for="userCode">Ingresa tu código de acceso</label>
-    <input type="text" id="userCode" class="input" formControlName="userCode" />
+    <input
+      type="text"
+      id="userCode"
+      class="input"
+      formControlName="userCode"
+      placeholder="Ej: c1"
+    />
   </div>
   <app-button type="submit" [loading]="loading">
     Solicitar código temporal
