--- a/src/app/auth/pages/change-password/change-password.component.html
+++ b/src/app/auth/pages/change-password/change-password.component.html
@@ -1,4 +1,4 @@
-<article class="card">
+<article class="card w-full">
   <header class="mb-3 flex flex-col gap-1">
     <h1 class="text-2xl text-gray-800 font-medium">{{ title() }}</h1>
     <h2 class="text-gray-700 font-light">{{ subtitle() }}</h2>
@@ -11,9 +11,18 @@
     />
   </ng-container>
   <ng-template #newPass>
-    <app-password-temp-code-form
-      [form]="passwordTempCodeForm"
-      [loading]="passwordTempCodeLoading()"
+    <app-change-password-form
+      [form]="changePasswordForm"
+      [loading]="changePasswordLoading()"
+      (onSubmit)="changePassword()"
     />
   </ng-template>
+  <footer class="w-full justify-center items-center flex mt-5">
+    <a
+      (click)="goToLogin()"
+      class="w-full text-center text-blue-500 text-base font-semibold hover:text-blue-400 cursor-pointer"
+    >
+      Volver al inicio
+    </a>
+  </footer>
 </article>
