--- a/src/app/auth/pages/change-password/components/change-password-form/change-password-form.component.html
+++ b/src/app/auth/pages/change-password/components/change-password-form/change-password-form.component.html
@@ -1,17 +1,23 @@
-<form class="form" [formGroup]="form">
+<form class="form" [formGroup]="form" (ngSubmit)="emitOnSubmit()">
   <div class="control">
     <label for="temp-code">Ingresa el código temporal</label>
     <input
       type="password"
       id="temp-code"
       class="input"
-      formControlName="passwordTempCode"
       autocomplete="off"
+      formControlName="tempCode"
     />
   </div>
   <div class="control">
     <label for="new-password">Contraseña nueva</label>
-    <input type="password" id="new-password" class="input" autocomplete="off" />
+    <input
+      type="password"
+      id="new-password"
+      class="input"
+      autocomplete="off"
+      formControlName="newPassword"
+    />
   </div>
   <div class="control">
     <label for="confirm-new-password">Confirma tu contraseña nueva</label>
@@ -20,7 +26,8 @@
       id="confirm-new-password"
       class="input"
       autocomplete="off"
+      formControlName="confirmPassword"
     />
   </div>
-  <app-button type="submit" [loading]="loading">Verificar</app-button>
+  <app-button type="submit" [loading]="loading">Confirmar cambio</app-button>
 </form>
