update: platforms page measures

--- a/src/app/portal/pages/platforms/platforms.component.html
+++ b/src/app/portal/pages/platforms/platforms.component.html
@@ -5,7 +5,7 @@
     hDescription="Listado de todas las plataformas con sus saldos del día"
     [hDescriptionSecondLine]="description"
   />
-  <section class="w-full grid grid-cols-3 gap-x-5">
+  <section class="w-full grid grid-cols-3 items-start gap-x-5">
     <article class="card col-span-1">
       <app-platform-balance-list />
     </article>
