--- a/src/app/portal/pages/platforms/components/platform-balance-list/platform-balance-list.component.html
+++ b/src/app/portal/pages/platforms/components/platform-balance-list/platform-balance-list.component.html
@@ -1,16 +1,13 @@
-<header class="h-12 mb-2 flex items-center justify-center">
-  <input
-    class="input w-full"
-    type="search"
-    id="search-platform"
-    placeholder="Buscar plataforma"
-  />
+<header class="mb-2 pb-2 border-b-2 border-gray-100">
+  <h2 class="text-2xl text-gray-800 font-medium">Listado de plataformas</h2>
 </header>
-<ul class="flex flex-col gap-1">
+<ul class="flex flex-col gap-1 max-h-[25rem] overflow-y-auto">
   <li
     *ngFor="let portalPlatform of portalPlatforms(); index as i"
-    class="text-gray-800 text-lg px-2 py-1 rounded-md cursor-pointer hover:bg-violet-100"
-    [ngClass]="i == selectedPortalPlatformIndex() ? 'bg-violet-100' : ''"
+    class="text-gray-700 text-lg px-2 py-1 rounded-md cursor-pointer hover:bg-violet-100"
+    [ngClass]="
+      i == selectedPortalPlatformIndex() ? 'bg-violet-100 text-gray-900' : ''
+    "
     (click)="handleSelectedPlatformBalance(portalPlatform, i)"
   >
     {{ portalPlatform.platformName }}
