--- a/src/app/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
+++ b/src/app/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
@@ -87,66 +87,77 @@
           <option value="" disabled selected>Denominación</option>
           <option
             value="hundredThousand"
+            class="enabled:text-violet-700 enabled:font-medium"
             [disabled]="receive() && selectedSafeBase?.hundredThousand === 0"
           >
             $100.000
           </option>
           <option
             value="fiftyThousand"
+            class="enabled:text-violet-700 enabled:font-medium"
             [disabled]="receive() && selectedSafeBase?.fiftyThousand === 0"
           >
             $50.000
           </option>
           <option
             value="twentyThousand"
+            class="enabled:text-violet-700 enabled:font-medium"
             [disabled]="receive() && selectedSafeBase?.twentyThousand === 0"
           >
             $20.000
           </option>
           <option
             value="tenThousand"
+            class="enabled:text-violet-700 enabled:font-medium"
             [disabled]="receive() && selectedSafeBase?.tenThousand === 0"
           >
             $10.000
           </option>
           <option
             value="fiveThousand"
+            class="enabled:text-violet-700 enabled:font-medium"
             [disabled]="receive() && selectedSafeBase?.fiveThousand === 0"
           >
             $5.000
           </option>
           <option
             value="twoThousand"
+            class="enabled:text-violet-700 enabled:font-medium"
             [disabled]="receive() && selectedSafeBase?.twoThousand === 0"
           >
             $2.000
           </option>
           <option
             value="thousand"
+            class="enabled:text-violet-700 enabled:font-medium"
             [disabled]="receive() && selectedSafeBase?.thousand === 0"
           >
             $1.000
           </option>
           <option
             value="fiveHundred"
+            class="enabled:text-violet-700 enabled:font-medium"
             [disabled]="receive() && selectedSafeBase?.fiveHundred === 0"
           >
             $500
           </option>
           <option
             value="twoHundred"
+            class="enabled:text-violet-700 enabled:font-medium"
             [disabled]="receive() && selectedSafeBase?.twoHundred === 0"
           >
             $200
           </option>
           <option
             value="thousand"
+            class="enabled:text-violet-700 enabled:font-medium"
             [disabled]="receive() && selectedSafeBase?.thousand === 0"
           >
             $100
           </option>
           <option
             value="fifty"
+            class="enabled:text-violet-700 enabled:font-medium"
             [disabled]="receive() && selectedSafeBase?.fifty === 0"
           >
             $50
