update: portal forms

--- a/src/app/portal/pages/home/pages/expenses/components/update-expense-form/update-expense-form.component.html
+++ b/src/app/portal/pages/home/pages/expenses/components/update-expense-form/update-expense-form.component.html
@@ -6,6 +6,7 @@
       id="update-description"
       class="input"
       formControlName="description"
+      autocomplete="off"
     />
   </div>
   <div class="control">
@@ -15,6 +16,7 @@
       id="update-value"
       class="input"
       formControlName="value"
+      autocomplete="off"
     />
   </div>
   <div class="flex flex-row-reverse justify-end items-center gap-3">
