--- a/src/app/portal/pages/home/pages/transactions/components/new-transaction-form/new-transaction-form.component.html
+++ b/src/app/portal/pages/home/pages/transactions/components/new-transaction-form/new-transaction-form.component.html
@@ -14,6 +14,7 @@
       class="input"
       id="description"
       formControlName="description"
+      autocomplete="off"
     />
     <!--ul
       class="absolute top-20 w-full px-2 py-2 bg-white rounded-xl drop-shadow flex flex-col"
@@ -36,7 +37,13 @@
   <div class="grid grid-cols-2 gap-3">
     <div class="control">
       <label for="value">Valor</label>
-      <input type="number" class="input" id="value" formControlName="value" />
+      <input
+        type="number"
+        class="input"
+        id="value"
+        formControlName="value"
+        autocomplete="off"
+      />
     </div>
     <div class="control">
       <label for="commission">Adicional</label>
@@ -45,6 +52,7 @@
         id="commission"
         class="input"
         formControlName="commission"
+        autocomplete="off"
       />
     </div>
   </div>
@@ -52,7 +60,7 @@
     <label for="time">Hora</label>
     <input type="time" id="time" class="input" formControlName="date" />
   </div>
-  <app-button type="submit" class="mt-3" [loading]="loading()"
-    >Guardar Transacción</app-button
-  >
+  <app-button type="submit" class="mt-3" [loading]="loading()">
+    Guardar Transacción
+  </app-button>
 </form>
