--- a/src/app/portal/pages/home/pages/transactions/components/update-transaction-detail-form/update-transaction-detail-form.component.html
+++ b/src/app/portal/pages/home/pages/transactions/components/update-transaction-detail-form/update-transaction-detail-form.component.html
@@ -14,6 +14,7 @@
       id="update-description"
       class="input"
       formControlName="description"
+      autocomplete="off"
     />
   </div>
   <div class="control">
@@ -30,6 +31,7 @@
       id="update-value"
       class="input"
       formControlName="value"
+      autocomplete="off"
     />
   </div>
   <div class="control">
@@ -39,6 +41,7 @@
       id="update-commission"
       class="input"
       formControlName="commission"
+      autocomplete="off"
     />
   </div>
   <div class="control">
