--- a/src/app/portal/pages/home/pages/bank-deposits/components/new-depositor-form/new-depositor-form.component.html
+++ b/src/app/portal/pages/home/pages/bank-deposits/components/new-depositor-form/new-depositor-form.component.html
@@ -6,10 +6,12 @@
     <div class="control">
       <label for="depositValue">Valor a entregar</label>
       <input
-        type="number"
+        type="text"
         id="depositValue"
         class="input"
         formControlName="value"
+        autocomplete="off"
+        appCurrencyFormat
       />
     </div>
     <app-button type="submit" [loading]="loading">Entregar</app-button>
