--- a/src/app/portal/pages/home/pages/transactions/components/update-transaction-detail-form/update-transaction-detail-form.component.html
+++ b/src/app/portal/pages/home/pages/transactions/components/update-transaction-detail-form/update-transaction-detail-form.component.html
@@ -27,21 +27,23 @@
   <div class="control">
     <label for="update-value">Valor</label>
     <input
-      type="number"
+      type="text"
       id="update-value"
       class="input"
       formControlName="value"
       autocomplete="off"
+      appCurrencyFormat
     />
   </div>
   <div class="control">
     <label for="update-commission">Adicional</label>
     <input
-      type="number"
+      type="text"
       id="update-commission"
       class="input"
       formControlName="commission"
       autocomplete="off"
+      appCurrencyFormat
     />
   </div>
   <div class="control">
