--- a/src/app/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
+++ b/src/app/portal/pages/home/pages/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
@@ -57,12 +57,13 @@
   >
     <label for="value">Valor</label>
     <input
-      type="number"
+      type="text"
       id="value"
       class="input"
       placeholder="$0"
       formControlName="value"
       autocomplete="off"
+      appCurrencyFormat
     />
   </div>
   <ng-template #safeValue>
