--- a/src/app/portal/pages/home/pages/expenses/components/new-expense-form/new-expense-form.component.html
+++ b/src/app/portal/pages/home/pages/expenses/components/new-expense-form/new-expense-form.component.html
@@ -12,11 +12,12 @@
   <div class="control">
     <label for="value">Valor</label>
     <input
-      type="number"
+      type="text"
       id="value"
       class="input"
       formControlName="value"
       autocomplete="off"
+      appCurrencyFormat
     />
   </div>
   <div class="flex flex-col gap-1">
