--- a/src/app/portal/pages/home/pages/expenses/components/update-expense-form/update-expense-form.component.html
+++ b/src/app/portal/pages/home/pages/expenses/components/update-expense-form/update-expense-form.component.html
@@ -12,11 +12,12 @@
   <div class="control">
     <label for="update-value">Valor</label>
     <input
-      type="number"
+      type="text"
       id="update-value"
       class="input"
       formControlName="value"
       autocomplete="off"
+      appCurrencyFormat
     />
   </div>
   <div class="flex flex-row-reverse justify-end items-center gap-3">
