--- a/src/app/portal/pages/cash-registers/pages/my-cash-registers/my-cash-registers.component.html
+++ b/src/app/portal/pages/cash-registers/pages/my-cash-registers/my-cash-registers.component.html
@@ -4,26 +4,17 @@
   [myCashRegisters]="myCashRegisters()"
   (handleSelectedCashRegister)="handleSelectedCashRegister($event)"
 />
-<section class="w-full mt-32 grid grid-cols-5 place-items-center gap-7">
-  <div class="col-span-1">
-    <app-icon-button
-      [icon]="faRefresh"
-      type="button"
-      (click)="refresh()"
-      [spinner]="refreshLoading()"
-    />
-  </div>
-  <div class="col-span-3 flex items-center justify-center gap-7">
-    <app-button
-      type="button"
-      [loading]="breakLoading()"
-      (click)="handleTakeBreak()"
-      *ngIf="myCurrentCashRegisterBreakTitle() !== ''"
-      >{{ myCurrentCashRegisterBreakTitle() }}</app-button
-    >
-    <app-button *ngIf="showCloseButton()" type="button" (click)="close()"
-      >Cerrar caja</app-button
-    >
-  </div>
-  <div class="col-span-1"></div>
-</section>
+<div class="mt-32"></div>
+<div class="flex items-center justify-center gap-7">
+  <app-button
+    type="button"
+    [loading]="breakLoading()"
+    (click)="handleTakeBreak()"
+    *ngIf="myCurrentCashRegisterBreakTitle() !== ''"
+  >
+    {{ myCurrentCashRegisterBreakTitle() }}
+  </app-button>
+  <app-button *ngIf="showCloseButton()" type="button" (click)="close()">
+    Cerrar caja
+  </app-button>
+</div>
