--- a/src/app/admin/pages/administration/administration.component.html
+++ b/src/app/admin/pages/administration/administration.component.html
@@ -1,34 +1,19 @@
 <app-header-title
   hTitle="Administración"
-  hDescription="Evalúa tus productos y siéntete libre de ajustar o añadir más registros"
+  hDescription="Puedes añadir, actualizar, y ver historial de todo tipo de registros"
 />
-<div class="grid grid-cols-[16rem_minmax(20rem,_1fr)] gap-6 w-full">
-  <section class="card">
-    <header class="mb-3">
-      <h3 class="text-xl text-gray-700 font-medium">Productos</h3>
-    </header>
-    <nav>
-      <ul class="flex flex-col gap-2">
-        <li>
-          <a
-            class="text-gray-800 text-lg flex items-center px-3 py-1.5 rounded-lg hover:bg-violet-100"
-            routerLink="cajas-fuertes"
-            routerLinkActive="bg-violet-200 text-gray-900 hover:bg-violet-200"
-            >Cajas Fuertes</a
-          >
-        </li>
-        <li>
-          <a
-            class="text-gray-800 text-lg flex items-center px-3 py-1.5 rounded-lg hover:bg-violet-100"
-            routerLink="cajas-registradoras"
-            routerLinkActive="bg-violet-200 text-gray-900 hover:bg-violet-200"
-            >Cajas Registradoras</a
-          >
-        </li>
-      </ul>
-    </nav>
-  </section>
-  <section>
+<div class="container flex flex-col items-center gap-7">
+  <nav class="w-fit bg-white shadow px-5 rounded-2xl">
+    <ul class="w-full flex items-center justify-center gap-2">
+      <app-adm-nav-item
+        headline="Cajas Registradoras"
+        route="cajas-registradoras"
+      />
+      <span class="text-violet-900">|</span>
+      <app-adm-nav-item headline="Cajas Fuertes" route="cajas-fuertes" />
+    </ul>
+  </nav>
+  <section class="w-full">
     <router-outlet />
   </section>
 </div>
