add: new page for platforms from administration page

--- a/src/app/admin/pages/administration/administration.component.html
+++ b/src/app/admin/pages/administration/administration.component.html
@@ -5,6 +5,8 @@
 <div class="container flex flex-col items-center gap-7">
   <nav class="w-fit bg-white shadow px-5 rounded-2xl">
     <ul class="w-full flex items-center justify-center gap-2">
+      <app-adm-nav-item headline="Plataformas" route="plataformas" />
+      <span class="text-violet-900">|</span>
       <app-adm-nav-item
         headline="Cajas Registradoras"
         route="cajas-registradoras"
