--- a/src/app/admin/pages/home/pages/platforms/platforms.component.html
+++ b/src/app/admin/pages/home/pages/platforms/platforms.component.html
@@ -1,7 +1,7 @@
 <app-header-title
   hTitle="Plataformas"
-  hDescription="Ten control absoluto de todas las plataformas a las que quieres administrar
-sus saldos y transferencias"
+  hDescription="Ten control absoluto de todas las plataformas a las que quieres administrar sus saldos y transferencias"
+  [return]="true"
 />
 <section class="border-2 border-neutral-300 rounded-md px-5 pt-5 pb-6">
   <h3 class="text-xl text-gray-700 mb-3">Registrar nueva plataforma</h3>
@@ -23,5 +23,6 @@ sus saldos y transferencias"
   actionName="Actualizar"
   mode="update"
   (onSubmit)="onUpdate()"
-  ><app-update-platform-form (onComplete)="onComplete()" />
+>
+  <app-update-platform-form (onComplete)="onComplete()" />
 </app-sidebar>
