--- a/src/app/shared/components/header-title/header-title.component.html
+++ b/src/app/shared/components/header-title/header-title.component.html
@@ -1,9 +1,19 @@
 <header
-  class="border-b-2 border-neutral-300 mb-5 py-4 px-6 -ml-6 w-[calc(100%_+_3rem)]"
+  class="border-b-2 border-neutral-300 mb-5 py-4 px-6 -ml-6 w-[calc(100%_+_3rem)] flex items-center gap-5"
 >
-  <h2 class="text-3xl text-gray-700 font-medium">{{ hTitle }}</h2>
-  <p class="text-gray-600 text-lg mt-1">{{ hDescription }}.</p>
-  <ng-container *ngIf="hDescriptionSecondLine">
-    <p class="text-gray-500 text-lg">{{ hDescriptionSecondLine }}.</p>
-  </ng-container>
+  <button
+    *ngIf="return"
+    class="bg-white border shadow-sm shadow-violet-300 rounded-2xl p-5 text-gray-700 hover:text-violet-700 hover:shadow-md duration-100"
+    title="Volver atrás"
+    (click)="goToBack()"
+  >
+    <fa-icon [icon]="faReturn" size="lg" />
+  </button>
+  <div>
+    <h2 class="text-3xl text-gray-700 font-medium">{{ hTitle }}</h2>
+    <p class="text-gray-600 text-lg mt-1">{{ hDescription }}.</p>
+    <ng-container *ngIf="hDescriptionSecondLine">
+      <p class="text-gray-500 text-lg">{{ hDescriptionSecondLine }}.</p>
+    </ng-container>
+  </div>
 </header>
