--- a/src/app/shared/components/header-title/header-title.component.html
+++ b/src/app/shared/components/header-title/header-title.component.html
@@ -3,7 +3,7 @@
 >
   <button
     *ngIf="return"
-    class="bg-white border shadow-sm shadow-violet-300 rounded-2xl p-5 text-gray-700 hover:text-violet-700 hover:shadow-md duration-100"
+    class="bg-white border shadow-sm shadow-violet-300 rounded-2xl size-12 text-gray-700 hover:text-violet-700 hover:shadow-md duration-100"
     title="Volver atrás"
     (click)="goToBack()"
   >
