--- a/src/app/shared/components/header-title/header-title.component.html
+++ b/src/app/shared/components/header-title/header-title.component.html
@@ -10,7 +10,7 @@
     <fa-icon [icon]="faReturn" size="lg" />
   </button>
   <div>
-    <h2 class="text-3xl text-gray-700 font-medium">{{ hTitle }}</h2>
+    <h2 class="text-3xl text-gray-700 font-medium">{{ hTitle ?? "--" }}</h2>
     <p class="text-gray-600 text-lg mt-1">{{ hDescription }}.</p>
     <ng-container *ngIf="hDescriptionSecondLine">
       <p class="text-gray-500 text-lg">{{ hDescriptionSecondLine }}.</p>
