add: quick actions

--- a/src/app/admin/home/platforms/platform-details/platform-details.component.html
+++ b/src/app/admin/home/platforms/platform-details/platform-details.component.html
@@ -5,7 +5,7 @@
 />
 <div class="grid grid-cols-2 gap-7">
   <section class="border border-gray-300 rounded-2xl px-7 py-5">
-    <h3 class="text-violet-700 font-medium text-2xl mb-1">Saldos</h3>
+    <h3 class="text-violet-700 font-medium text-2xl mb-5">Saldos</h3>
     <ul class="flex flex-col gap-1">
       <app-platform-detail-balance
         headline="Inicial"
@@ -16,5 +16,16 @@
         [balance]="details()?.balances?.[0]?.finalBalance"
       />
     </ul>
+  </section>
+  <section class="border border-gray-300 rounded-2xl px-7 py-5">
+    <h3 class="text-violet-700 font-medium text-2xl mb-5">Acciones rápidas</h3>
+    <div class="flex flex-col gap-3">
+      <app-icon-button [icon]="faAdd" type="button">
+        Agregar transferencia
+      </app-icon-button>
+      <app-icon-button [icon]="faEdit" type="button">
+        Editar saldos
+      </app-icon-button>
+    </div>
   </section>
 </div>
