--- a/src/app/admin/home/platforms/platform-details/platform-details.component.html
+++ b/src/app/admin/home/platforms/platform-details/platform-details.component.html
@@ -23,9 +23,10 @@
       <app-icon-button [icon]="faAdd" type="button">
         Agregar transferencia
       </app-icon-button>
-      <app-icon-button [icon]="faEdit" type="button">
+      <app-icon-button [icon]="faEdit" type="button" (click)="modal.open()">
         Editar saldos
       </app-icon-button>
     </div>
   </section>
 </div>
+<app-update-balances-modal />
