update: some styles

--- a/src/app/portal/platforms/components/update-platform-balances-form/update-platform-balances-form.component.html
+++ b/src/app/portal/platforms/components/update-platform-balances-form/update-platform-balances-form.component.html
@@ -2,7 +2,7 @@
   <div class="control">
     <label for="initialBalance">Saldo Inicial</label>
     <input
-      type="text"
+      type="number"
       id="initialBalance"
       class="input"
       formControlName="initialBalance"
@@ -13,7 +13,7 @@
   <div class="control">
     <label for="finalBalance">Saldo Final</label>
     <input
-      type="text"
+      type="number"
       id="finalBalance"
       class="input"
       formControlName="finalBalance"
