--- a/src/app/admin/dashboard/components/platforms-modal/platforms-modal.component.html
+++ b/src/app/admin/dashboard/components/platforms-modal/platforms-modal.component.html
@@ -1,14 +1,8 @@
-<dialog
-  #modal
-  class="px-4 py-5 rounded-lg outline-none backdrop:bg-black backdrop:bg-opacity-30 backdrop:backdrop-blur-sm"
->
-  <header class="mb-5 border-b border-gray-400 pb-2">
-    <h2 class="text-center text-gray-800 text-3xl font-medium">Plataformas</h2>
-  </header>
+<app-modal headline="Plataformas" width="4xl" align="center" fontSize="3xl">
   <app-platforms-stats-table />
   <footer
     class="flex items-center justify-end mt-7 border-t border-gray-400 pt-5"
   >
     <app-button type="button" (click)="close()">Cerrar</app-button>
   </footer>
-</dialog>
+</app-modal>
