--- a/src/app/admin/home/platforms/components/update-balances-modal/update-balances-modal.component.html
+++ b/src/app/admin/home/platforms/components/update-balances-modal/update-balances-modal.component.html
@@ -7,6 +7,7 @@
         id="initial"
         class="input"
         formControlName="initialBalance"
+        autocomplete="off"
       />
     </div>
     <div class="control">
@@ -16,6 +17,7 @@
         id="final"
         class="input"
         formControlName="finalBalance"
+        autocomplete="off"
       />
     </div>
     <app-button type="submit" class="mt-3" [loading]="loading()">
