--- a/src/app/admin/home/platforms/platform-details/platform-details.component.html
+++ b/src/app/admin/home/platforms/platform-details/platform-details.component.html
@@ -23,7 +23,12 @@
       <app-icon-button [icon]="faAdd" type="button">
         Agregar transferencia
       </app-icon-button>
-      <app-icon-button [icon]="faEdit" type="button" (click)="modal.open()">
+      <app-icon-button
+        [icon]="faEdit"
+        type="button"
+        color="neutral"
+        (click)="modal.open()"
+      >
         Editar saldos
       </app-icon-button>
     </div>
