--- a/src/app/shared/components/modal/modal.component.html
+++ b/src/app/shared/components/modal/modal.component.html
@@ -1,8 +1,13 @@
 <dialog
   #modal
-  [ngClass]="maxWidth"
+  [ngClass]="mapMaxWidth"
   class="w-full max-h-[80%] overflow-y-auto px-7 py-5 rounded-lg shadow-lg backdrop:backdrop-blur-sm"
 >
-  <h2 class="text-2xl text-violet-700 font-medium mb-5">{{ headline }}</h2>
+  <h2
+    class="text-violet-700 font-medium mb-5"
+    [ngClass]="[mapFontSize, mapTextAlign]"
+  >
+    {{ headline }}
+  </h2>
   <ng-content></ng-content>
 </dialog>
