feat: transfers api

--- a/src/app/admin/home/platforms/platform-details/platform-details.component.html
+++ b/src/app/admin/home/platforms/platform-details/platform-details.component.html
@@ -5,6 +5,10 @@
 />
 <div class="grid grid-cols-2 gap-7">
   <app-platform-details-balances [balances]="details()?.balances?.[0]" />
-  <app-platform-details-quick-actions (onEditBalances)="modal.open()" />
+  <app-platform-details-quick-actions
+    (onEditBalances)="balancesModal.open()"
+    (onNewTransfer)="transferModal.open()"
+  />
 </div>
 <app-update-balances-modal />
+<app-new-platform-transfer-modal />
