--- a/src/app/admin/home/platforms/components/platform-details-quick-actions/platform-details-quick-actions.component.html
+++ b/src/app/admin/home/platforms/components/platform-details-quick-actions/platform-details-quick-actions.component.html
@@ -2,7 +2,11 @@
   <h3 class="text-violet-700 font-medium text-2xl mb-5">Acciones rápidas</h3>
   <ul class="flex flex-col gap-3">
     <li>
-      <app-icon-button [icon]="faAdd" type="button">
+      <app-icon-button
+        [icon]="faAdd"
+        type="button"
+        (click)="onNewTransfer.emit()"
+      >
         Agregar transferencia
       </app-icon-button>
     </li>
