--- a/src/app/admin/home/platforms/components/new-platform-form/new-platform-form.component.html
+++ b/src/app/admin/home/platforms/components/new-platform-form/new-platform-form.component.html
@@ -1,16 +1,10 @@
 <form class="w-full form" [formGroup]="form" (ngSubmit)="onSubmit()">
   <div class="control">
     <label for="name">Nombre</label>
-    <div class="grid grid-cols-[1fr,_14rem] gap-7">
-      <input
-        type="text"
-        id="name"
-        [readOnly]="loading()"
-        formControlName="name"
-        class="input"
-      />
-      <app-button type="submit" [loading]="loading()"
-        >Registrar plataforma</app-button
+    <div class="grid grid-cols-[1fr,_15rem] gap-7">
+      <input type="text" id="name" formControlName="name" class="input" />
+      <app-button type="submit" [loading]="loading()">
+        Registrar plataforma</app-button
       >
     </div>
   </div>
