--- a/src/app/admin/home/platforms/components/new-platform-transfer-modal/new-platform-transfer-modal.component.html
+++ b/src/app/admin/home/platforms/components/new-platform-transfer-modal/new-platform-transfer-modal.component.html
@@ -12,6 +12,9 @@
         placeholder="0"
       />
     </div>
+    <span class="text-yellow-700 font-medium text-center">
+      Fecha de transferencia: {{ date() | date : "dd/MM/yyyy" }}
+    </span>
     <app-button type="submit" class="mt-3" [loading]="loading()">
       Registrar
     </app-button>
