--- a/src/app/admin/home/platforms/components/update-balances-modal/update-balances-modal.component.html
+++ b/src/app/admin/home/platforms/components/update-balances-modal/update-balances-modal.component.html
@@ -20,6 +20,9 @@
         autocomplete="off"
       />
     </div>
+    <span class="text-center text-yellow-700 font-medium">
+      Fecha de saldos: {{ date() | date : "dd/MM/yyyy" }}
+    </span>
     <app-button type="submit" class="mt-3" [loading]="loading()">
       Actualizar
     </app-button>
