--- a/src/app/admin/home/platforms/components/new-platform-transfer-modal/new-platform-transfer-modal.component.html
+++ b/src/app/admin/home/platforms/components/new-platform-transfer-modal/new-platform-transfer-modal.component.html
@@ -15,7 +15,15 @@
     <span class="text-yellow-700 font-medium text-center">
       Fecha de transferencia: {{ date() | date : "dd/MM/yyyy" }}
     </span>
-    <app-button type="submit" class="mt-3" [loading]="loading()">
+    <span class="text-red-700 text-center fon-medium" *ngIf="empty()">
+      No es posible agregar transferencias
+    </span>
+    <app-button
+      type="submit"
+      class="mt-3"
+      [loading]="loading()"
+      [disabled]="empty()"
+    >
       Registrar
     </app-button>
     <app-button type="button" color="neutral" (click)="modal.close()">
