--- a/src/app/admin/home/platforms/components/update-balances-modal/update-balances-modal.component.html
+++ b/src/app/admin/home/platforms/components/update-balances-modal/update-balances-modal.component.html
@@ -23,7 +23,15 @@
     <span class="text-center text-yellow-700 font-medium">
       Fecha de saldos: {{ date() | date : "dd/MM/yyyy" }}
     </span>
-    <app-button type="submit" class="mt-3" [loading]="loading()">
+    <span class="text-red-700 text-center font-medium" *ngIf="empty()">
+      No es posible actualizar los saldos
+    </span>
+    <app-button
+      type="submit"
+      class="mt-3"
+      [loading]="loading()"
+      [disabled]="empty()"
+    >
       Actualizar
     </app-button>
     <app-button type="button" color="neutral" (click)="modal.close()">
