--- a/src/app/admin/home/platforms/platform-details/platform-details.component.html
+++ b/src/app/admin/home/platforms/platform-details/platform-details.component.html
@@ -11,6 +11,7 @@
       id="date"
       class="input"
       (change)="onChangeDate($event)"
+      [value]="today"
       [max]="today"
     />
   </label>
