update: details layout

--- a/src/app/admin/home/platforms/platform-details/platform-details.component.html
+++ b/src/app/admin/home/platforms/platform-details/platform-details.component.html
@@ -3,8 +3,7 @@
   hDescription="Administra tus saldos y transferencias realizadas a la plataforma"
   [return]="true"
 />
-
-<div class="grid grid-cols-2 gap-x-7 gap-y-5 justify-items-stretch">
+<div class="grid grid-cols-2 gap-x-7 gap-y-5">
   <app-platform-details-balances
     [balances]="details()?.balances?.[0]"
     class="row-span-2"
