--- a/src/app/admin/dashboard/components/cash-box-stat-card/cash-box-stat-card.component.html
+++ b/src/app/admin/dashboard/components/cash-box-stat-card/cash-box-stat-card.component.html
@@ -2,8 +2,8 @@
   class="card cursor-pointer uppercase hover:scale-105 duration-150"
   (click)="emitOpen()"
 >
-  <h3 class="text-xl mb-1">{{ stat }}</h3>
-  <p class="text-right text-3xl font-bold">
+  <h3 class="text-lg text-violet-700 mb-1">{{ stat }}</h3>
+  <p class="text-right text-3xl text-gray-700 font-bold">
     {{ value ?? 0 | currency : "symbol" : "$" : "0.00" }}
   </p>
 </article>
