update: tables responsive

--- a/src/app/admin/home/cash-registers/components/new-cash-register-form/new-cash-register-form.component.html
+++ b/src/app/admin/home/cash-registers/components/new-cash-register-form/new-cash-register-form.component.html
@@ -20,6 +20,6 @@
     />
   </div>
   <app-button type="submit" [loading]="loading()" class="mt-3"
-    >Registrar Caja Registradora</app-button
-  >
+    >Registrar
+  </app-button>
 </form>
