--- a/src/app/admin/dashboard/components/platforms-modal/platforms-modal.component.html
+++ b/src/app/admin/dashboard/components/platforms-modal/platforms-modal.component.html
@@ -1,5 +1,7 @@
 <app-modal headline="Plataformas" width="4xl" align="center" fontSize="3xl">
-  <app-platforms-stats-table />
+  <div class="max-h-[21rem] overflow-y-auto">
+    <app-platforms-stats-table />
+  </div>
   <footer
     class="flex items-center justify-end mt-7 border-t border-gray-400 pt-5"
   >
