--- a/src/app/admin/home/cash-registers/cash-registers.component.html
+++ b/src/app/admin/home/cash-registers/cash-registers.component.html
@@ -7,9 +7,11 @@
     <h3 class="text-2xl text-gray-700 font-medium mb-3">Registro de caja</h3>
     <app-new-cash-register-form />
   </article>
-  <article class="card">
+  <article class="card overflow-x-auto">
     <h3 class="text-2xl text-gray-700 font-medium mb-3">Listado de cajas</h3>
-    <app-cash-registers-table (onEdit)="showSideBar.set(true)" />
+    <div class="overflow-x-auto">
+      <app-cash-registers-table (onEdit)="showSideBar.set(true)" />
+    </div>
   </article>
 </div>
 <app-sidebar
