--- a/src/app/admin/home/safes/safes.component.html
+++ b/src/app/admin/home/safes/safes.component.html
@@ -11,7 +11,7 @@
     <h3 class="text-2xl text-gray-700 font-medium mb-3">
       Listado de cajas fuertes registradas
     </h3>
-    <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
+    <div class="card overflow-x-auto">
       <app-safes-table />
     </div>
   </section>
