--- a/src/app/admin/home/users/users.component.html
+++ b/src/app/admin/home/users/users.component.html
@@ -10,17 +10,19 @@
     <div class="flex flex-col gap-3">
       <div class="flex items-center justify-between">
         <app-filter-by-role />
-        <app-button type="button" (click)="showSideBarRegister.set(true)"
-          >Añadir usuario</app-button
-        >
+        <app-button type="button" (click)="showSideBarRegister.set(true)">
+          Añadir usuario
+        </app-button>
       </div>
       <div class="divider"></div>
       <app-filter-by-enabled />
       <app-spinner *ngIf="loading()" />
-      <app-users-table
-        *ngIf="!loading()"
-        (onEdit)="showSideBarUpdate.set(true)"
-      />
+      <div class="overflow-x-auto">
+        <app-users-table
+          *ngIf="!loading()"
+          (onEdit)="showSideBarUpdate.set(true)"
+        />
+      </div>
     </div>
   </div>
 </section>
