update: platform details page

--- a/src/app/admin/home/platforms/platform-details/platform-details.component.html
+++ b/src/app/admin/home/platforms/platform-details/platform-details.component.html
@@ -22,6 +22,12 @@
     (onEditBalances)="balancesModal.open()"
     (onNewTransfer)="transferModal.open()"
   />
+  <article class="card col-span-2">
+    <h4 class="text-center text-violet-700 font-medium text-2xl mb-5">
+      Transferencias
+    </h4>
+    <app-transfers-table />
+  </article>
 </div>
 <app-update-balances-modal />
 <app-new-platform-transfer-modal />
