--- a/src/app/admin/home/platforms/platform-details/platform-details.component.html
+++ b/src/app/admin/home/platforms/platform-details/platform-details.component.html
@@ -4,10 +4,7 @@
   [return]="true"
 />
 <div class="grid grid-cols-2 gap-x-7 gap-y-5">
-  <app-platform-details-balances
-    [balances]="details()?.balances?.[0]"
-    class="row-span-2"
-  />
+  <app-platform-details-balances class="row-span-2" />
   <form class="w-full">
     <input
       type="date"
@@ -26,7 +23,12 @@
     <h4 class="text-center text-violet-700 font-medium text-2xl mb-5">
       Transferencias
     </h4>
-    <app-transfers-table />
+    <ng-template #transfersSpinner>
+      <app-spinner />
+    </ng-template>
+    <div class="overflow-x-auto" *ngIf="!loading(); else transfersSpinner">
+      <app-transfers-table />
+    </div>
   </article>
 </div>
 <app-update-balances-modal />
