fix: new cash transfers typo error and add new module for cash register details page

--- a/src/app/portal/home/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
+++ b/src/app/portal/home/transfers/components/new-cash-transfer-form/new-cash-transfer-form.component.html
@@ -152,9 +152,9 @@
             $200
           </option>
           <option
-            value="thousand"
+            value="hundred"
             class="enabled:text-violet-700 enabled:font-medium"
-            [disabled]="receive() && selectedSafeBase?.thousand === 0"
+            [disabled]="receive() && selectedSafeBase?.hundred === 0"
           >
             $100
           </option>
