add: header to cash register details summary page

--- a/src/app/admin/home/cash-registers/cash-registers-details/summary/summary.component.html
+++ b/src/app/admin/home/cash-registers/cash-registers-details/summary/summary.component.html
@@ -1,1 +1,4 @@
-<p>summary works!</p>
+<app-header-title
+  [hTitle]="title()"
+  hDescription="Administración y movimientos de la caja registradora"
+/>
