--- a/src/app/admin/home/cash-registers/cash-registers-details/summary/summary.component.html
+++ b/src/app/admin/home/cash-registers/cash-registers-details/summary/summary.component.html
@@ -1,4 +1,5 @@
 <app-header-title
   [hTitle]="title()"
   hDescription="Administración y movimientos de la caja registradora"
+  [return]="true"
 />
