add: home-shared module for detail wrapper

--- a/src/app/admin/home/platforms/components/platform-details-balances/platform-details-balances.component.html
+++ b/src/app/admin/home/platforms/components/platform-details-balances/platform-details-balances.component.html
@@ -1,9 +1,5 @@
-<section class="border border-gray-300 rounded-2xl px-7 py-5 size-full">
-  <h3 class="text-violet-700 font-medium text-2xl mb-5">Saldos</h3>
-  <ng-template #spinner>
-    <app-spinner />
-  </ng-template>
-  <ul class="flex flex-col gap-1" *ngIf="!loading(); else spinner">
+<app-detail-wrapper headline="Saldos" [loading]="loading()">
+  <ul class="flex flex-col gap-1">
     <app-platform-detail-balance
       headline="Inicial"
       [balance]="details()?.balances?.[0]?.initialBalance"
@@ -13,4 +9,4 @@
       [balance]="details()?.balances?.[0]?.finalBalance"
     />
   </ul>
-</section>
+</app-detail-wrapper>
