--- a/src/app/admin/home/platforms/components/platform-details-quick-actions/platform-details-quick-actions.component.html
+++ b/src/app/admin/home/platforms/components/platform-details-quick-actions/platform-details-quick-actions.component.html
@@ -1,5 +1,4 @@
-<section class="border border-gray-300 rounded-2xl px-7 py-5 size-full">
-  <h3 class="text-violet-700 font-medium text-2xl mb-5">Acciones rápidas</h3>
+<app-detail-wrapper headline="Acciones rápidas" [loading]="false">
   <ul class="flex flex-col gap-3">
     <li>
       <app-icon-button
@@ -21,4 +20,4 @@
       </app-icon-button>
     </li>
   </ul>
-</section>
+</app-detail-wrapper>
