--- a/src/app/admin/home/cash-registers/details/summary/summary.component.html
+++ b/src/app/admin/home/cash-registers/details/summary/summary.component.html
@@ -3,3 +3,6 @@
   hDescription="Administración y movimientos de la caja registradora"
   [return]="true"
 />
+<div class="grid grid-cols-2 gap-x-7 gap-y-5">
+  <app-hours-stats />
+</div>
