update: container and remove unnecessary component

--- a/src/app/admin/home/cash-registers/details/components/hours-stats/hours-stats.component.html
+++ b/src/app/admin/home/cash-registers/details/components/hours-stats/hours-stats.component.html
@@ -1,22 +1,24 @@
 <app-detail-wrapper headline="Horas" [loading]="loading()">
-  <app-detail-stat-wrapper
-    headline="Entrada"
-    [stat]="detail()?.initialWorking"
-    pipe="time"
-  />
-  <app-detail-stat-wrapper
-    headline="Almuerzo Entrada"
-    [stat]="detail()?.initialBreak"
-    pipe="time"
-  />
-  <app-detail-stat-wrapper
-    headline="Almuerzo Salida"
-    [stat]="detail()?.finalBreak"
-    pipe="time"
-  />
-  <app-detail-stat-wrapper
-    headline="Salida"
-    [stat]="detail()?.finalWorking"
-    pipe="time"
-  />
+  <ul class="flex flex-col gap-1">
+    <app-detail-stat-wrapper
+      headline="Entrada"
+      [stat]="detail()?.initialWorking"
+      pipe="time"
+    />
+    <app-detail-stat-wrapper
+      headline="Almuerzo Entrada"
+      [stat]="detail()?.initialBreak"
+      pipe="time"
+    />
+    <app-detail-stat-wrapper
+      headline="Almuerzo Salida"
+      [stat]="detail()?.finalBreak"
+      pipe="time"
+    />
+    <app-detail-stat-wrapper
+      headline="Salida"
+      [stat]="detail()?.finalWorking"
+      pipe="time"
+    />
+  </ul>
 </app-detail-wrapper>
