--- a/src/app/admin/home/cash-registers/details/components/base/base.component.html
+++ b/src/app/admin/home/cash-registers/details/components/base/base.component.html
@@ -1,12 +1,25 @@
 <app-detail-wrapper headline="Base" [loading]="loading()">
-  <app-detail-stat-wrapper
-    headline="Inicial"
-    [stat]="detail()?.initialBase"
-    pipe="currency"
-  />
-  <app-detail-stat-wrapper
-    headline="Final"
-    [stat]="detail()?.finalBase"
-    pipe="currency"
-  />
+  <ul class="flex flex-col gap-1">
+    <app-detail-stat-wrapper
+      headline="Inicial"
+      [stat]="detail()?.initialBase"
+      pipe="currency"
+    />
+    <app-detail-stat-wrapper
+      headline="Final"
+      [stat]="detail()?.finalBase"
+      pipe="currency"
+    />
+    <li class="text-lg text-gray-700 px-2 py-1 rounded-lg hover:bg-violet-50">
+      <ng-container
+        *ngIf="detail()?.baseObservation !== ''; else noObservation"
+      >
+        Observación
+        <span class="text-pretty text-base">{{
+          detail()?.baseObservation
+        }}</span>
+      </ng-container>
+      <ng-template #noObservation> Sin observaciones </ng-template>
+    </li>
+  </ul>
 </app-detail-wrapper>
