--- a/src/app/admin/home/home-shared/components/detail-wrapper/detail-wrapper.component.html
+++ b/src/app/admin/home/home-shared/components/detail-wrapper/detail-wrapper.component.html
@@ -1,5 +1,5 @@
 <section class="border border-gray-300 rounded-2xl px-7 py-5 size-full">
-  <h3 class="text-violet-700 font-medium text-2xl mb-5">{{ headline }}</h3>
+  <app-detail-headline [headline]="headline" [align]="align" />
   <ng-template #spinner>
     <app-spinner />
   </ng-template>
