--- a/src/app/admin/home/platforms/list/list.component.html
+++ b/src/app/admin/home/platforms/list/list.component.html
@@ -3,21 +3,16 @@
   hDescription="Ten control absoluto de todas las plataformas a las que quieres administrar sus saldos y transferencias"
   [return]="true"
 />
-<section class="border-2 border-neutral-300 rounded-md px-5 pt-5 pb-6">
-  <h3 class="text-xl text-gray-700 mb-3">Registrar nueva plataforma</h3>
-  <app-new-platform-form />
-</section>
-<section class="mt-10">
-  <h3 class="text-2xl text-gray-700 font-medium mb-3">
-    Listado de plataformas registradas
-  </h3>
-  <div class="px-5 pt-5 pb-6 bg-white rounded-lg drop-shadow-lg">
-    <app-spinner *ngIf="loading()" />
-    <div class="overflow-x-auto">
-      <app-platforms-table *ngIf="!loading()" (onEdit)="onEdit()" />
-    </div>
+<article class="card">
+  <app-list-headline-header
+    headline="Listado de plataformas"
+    action="Añadir plataforma"
+  />
+  <app-spinner *ngIf="loading()" />
+  <div class="overflow-x-auto">
+    <app-platforms-table *ngIf="!loading()" (onEdit)="onEdit()" />
   </div>
-</section>
+</article>
 <app-sidebar
   headline="Plataforma"
   [showSideBar]="showSideBar"
