--- a/src/app/shared/components/button/button.component.html
+++ b/src/app/shared/components/button/button.component.html
@@ -1,5 +1,5 @@
 <button
-  class="w-full flex items-center justify-center gap-1.5 text-lg px-6 py-1.5 rounded-xl font-semibold focus:outline-none focus:ring-4 disabled:opacity-95 drop-shadow-lg"
+  class="w-full flex items-center justify-center gap-1.5 text-sm sm:text-base md:text-lg px-4 sm:px-5 md:px-6 py-1 sm:py-1.5 rounded-xl font-semibold focus:outline-none focus:ring-4 disabled:opacity-95 drop-shadow-lg"
   [ngClass]="getColor"
   [type]="type"
   [disabled]="disabled || loading"
@@ -10,10 +10,10 @@
     class="flex justify-center items-center gap-1.5"
   >
     <div
-      class="flex justify-center items-center w-5 h-5 bg-gradient-to-t from-stone-50 to-stone-300 rounded-full animate-spin"
+      class="flex justify-center items-center size-4 sm:size-5 bg-gradient-to-t from-stone-50 to-stone-300 rounded-full animate-spin"
     >
       <div
-        class="w-3.5 h-3.5 rounded-full"
+        class="size-3 sm:size-3.5 rounded-full"
         [ngClass]="{
           'bg-violet-600': color === 'primary',
           'bg-neutral-600': color === 'neutral'
