--- a/src/app/shared/components/custom-table/custom-table.component.html
+++ b/src/app/shared/components/custom-table/custom-table.component.html
@@ -11,7 +11,7 @@
       <th
         scope="col"
         *ngFor="let header of table.header"
-        class="text-gray-800 text-sm px-5 py-2 uppercase text-nowrap"
+        class="text-gray-800 text-xs md:text-sm px-5 py-2 uppercase text-nowrap"
         [ngClass]="{
           'text-left': !header.align,
           'text-center': header.align === 'center',
@@ -31,7 +31,7 @@
     >
       <td
         *ngFor="let header of table.header"
-        class="text-gray-800 px-5 py-2 text-nowrap"
+        class="text-gray-800 text-sm md:text-base px-5 py-2 text-nowrap"
         [ngClass]="{
           'text-left': !header.align,
           'text-center': header.align === 'center',
@@ -50,13 +50,13 @@
           <fa-icon
             *ngIf="table.onEdit"
             [icon]="faEdit"
-            class="text-yellow-500 text-lg cursor-pointer py-0.5 px-2 rounded-full hover:bg-black hover:bg-opacity-10"
+            class="text-yellow-500 text-base md:text-lg cursor-pointer py-0.5 px-2 rounded-full hover:bg-black hover:bg-opacity-10"
             (click)="onEdit($event, i)"
           />
           <fa-icon
             *ngIf="table.onRemove"
             [icon]="faRemove"
-            class="text-red-500 text-lg cursor-pointer py-0.5 px-2 rounded-full hover:bg-black hover:bg-opacity-10"
+            class="text-red-500 text-base md:text-lg cursor-pointer py-0.5 px-2 rounded-full hover:bg-black hover:bg-opacity-10"
             (click)="onRemove($event, i)"
           />
         </span>
