--- a/src/app/shared/components/header-title/header-title.component.html
+++ b/src/app/shared/components/header-title/header-title.component.html
@@ -10,7 +10,9 @@
     <fa-icon [icon]="faReturn" class="text-sm md:text-xl" />
   </button>
   <div>
-    <h2 class="text-xl sm:text-2xl md:text-3xl text-gray-700 font-medium">
+    <h2
+      class="text-xl sm:text-2xl md:text-3xl text-gray-700 font-medium text-pretty"
+    >
       {{ hTitle ?? "--" }}
     </h2>
     <p class="text-gray-600 text-sm sm:text-base md:text-lg mt-1">
